--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status": "^1.7.4",
+    "joi": "^17.13.1",
     "mongoose": "^8.4.0",
     "typescript-eslint": "^7.9.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
