--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.14",
     "typescript-eslint": "^7.9.0",
     "zod": "^3.23.8"
   },
